@@ -1,3 +1,15 @@
+2019-09-18  Andy Estes  <aestes@apple.com>
+
+        [Cocoa] Add a WKA extension point
+        https://bugs.webkit.org/show_bug.cgi?id=201801
+        <rdar://problem/55372507>
+
+        Reviewed by Alexey Proskuryakov.
+
+        * Modules/applepay/ApplePayRequestBase.cpp:
+        (WebCore::requiresSupportedNetworks):
+        (WebCore::convertAndValidate):
+
 2019-09-17  Chris Dumez  <cdumez@apple.com>
 
         Unreviewed, revert change that Alex mistakenly committed at the same time as r250006 and broke the build.
